--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -66,6 +66,9 @@
                 <height>16777215</height>
                </size>
               </property>
+              <property name="toolTip">
+               <string>Select your code signing certificate file to use for signing here!</string>
+              </property>
               <property name="text">
                <string>Browse</string>
               </property>
@@ -119,7 +122,7 @@
         <item>
          <widget class="QLabel" name="labelFilesToSign">
           <property name="text">
-           <string>Files to sign (*.exe, *.dll, *.cab, *.cat, *.appx)</string>
+           <string>Files to sign (*.exe, *.msi, *.dll, *.cab, *.cat, *.appx)</string>
           </property>
          </widget>
         </item>
@@ -207,7 +210,7 @@
           <item>
            <widget class="QLabel" name="labelFilesToVerify">
             <property name="text">
-             <string>Files to verify (*.exe, *.dll, *.cab, *.cat, *.appx)</string>
+             <string>Files to verify (*.exe, *.msi, *.dll, *.cab, *.cat, *.appx)</string>
             </property>
            </widget>
           </item>
@@ -565,6 +568,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="pushButtonRevertAllSettingsToDefaultValues">
+          <property name="toolTip">
+           <string>This button reverts all the above settings to their default values.</string>
+          </property>
           <property name="text">
            <string>Restore all default settings</string>
           </property>
@@ -823,7 +829,7 @@ p, li { white-space: pre-wrap; }
      <x>0</x>
      <y>0</y>
      <width>420</width>
-     <height>17</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
@@ -839,7 +845,7 @@ p, li { white-space: pre-wrap; }
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupTimestampHashAlgo"/>
   <buttongroup name="buttonGroupHashAlgo"/>
+  <buttongroup name="buttonGroupTimestampHashAlgo"/>
  </buttongroups>
 </ui>
