--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -122,7 +122,7 @@
         <item>
          <widget class="QLabel" name="labelFilesToSign">
           <property name="text">
-           <string>Files to sign (*.exe, *.msi, *.dll, *.cab, *.cat, *.appx)</string>
+           <string>Files to sign (*.exe, *.msi, *.dll, *.cab, *.cat, *.ps1, *.vbs, *.appx, *.msix)</string>
           </property>
          </widget>
         </item>
@@ -835,7 +835,7 @@ p, li { white-space: pre-wrap; }
      <x>0</x>
      <y>0</y>
      <width>420</width>
-     <height>21</height>
+     <height>17</height>
     </rect>
    </property>
   </widget>
@@ -851,7 +851,7 @@ p, li { white-space: pre-wrap; }
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupHashAlgo"/>
   <buttongroup name="buttonGroupTimestampHashAlgo"/>
+  <buttongroup name="buttonGroupHashAlgo"/>
  </buttongroups>
 </ui>
